k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-app
  namespace: enterprise-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-app
  template:
    metadata:
      labels:
        app: tomcat-app
    spec:
      restartPolicy: Never
      containers:
      - name: tomcat-container
        image: tomcat-app:latest
        imagePullPolicy: Never   # important for local docker
        ports:
        - containerPort: 8080
