k8s/service-helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service-helloworld
  namespace: enterprise-app
spec:
  type: NodePort
  selector:
    app: tomcat-helloworld
  ports:
    - port: 8080
      targetPort: 8080
