k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: enterprise-app
spec:
  type: NodePort
  selector:
    app: tomcat-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
