k8s/service_helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  type: NodePort
  selector:
    app: tomcat-helloworld
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
